# swus

./: AUTHORS  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
docs/: service.wsdl  swus.nsmap
docs/trash/: swus-service.cpp  swus-service.hpp
src/: Makefile.am  Makefile.in  SWUS.h  generate.sh  main.cpp  soapC.cpp  soapH.h  soapStub.h  soapswusService.cpp  soapswusService.h  swus-server.cpp  swus-server.hpp
test/: Makefile.am  Makefile.in  SWUS.h  generate.sh  soapC.cpp  soapH.h  soapStub.h  soapswusProxy.cpp  soapswusProxy.h  swus-client.cpp  swus-client.hpp  swus-test-server.cpp  swus-test-server.hpp  swus.nsmap  tst-client.cpp  tst-server.cpp  users-wrong.csv  users.csv
